# anemone-engine

./: .gitignore  CMakeLists.txt  README.md
resources/shaders/: fs.glsl  vs.glsl
resources/tilemaps/: forest.tmj
source/: CMakeLists.txt
source/anemone/components/: boxcollidercomponent.hpp  circlecollidercomponent.hpp  collidercomponent.hpp  components.hpp  identifiercomponent.hpp  playercontrollercomponent.hpp  rigidbodycomponent.hpp  spritecomponent.hpp  transformcomponent.hpp
source/anemone/core/: componenthandler.hpp  componentpool.hpp  corehandler.hpp  ecimapper.hpp  system.hpp  systemhandler.hpp
source/anemone/eventhandler/: event.hpp  eventhandler.hpp  memberfunction.hpp
source/anemone/events/: collisionevent.hpp  keypressedevent.hpp  keyreleasedevent.hpp
source/anemone/graphics/: ebo.cpp  ebo.hpp  mesh.cpp  mesh.hpp  quad.hpp  shader.cpp  shader.hpp  vao.cpp  vao.hpp  vbo.cpp  vbo.hpp
source/anemone/logger/: logger.cpp  logger.hpp
source/anemone/physics/: physicshandler.cpp  physicshandler.hpp
source/anemone/resourcehandler/: resourcehandler.cpp  resourcehandler.hpp
source/anemone/systems/: collisionsystem.cpp  collisionsystem.hpp  damagesystem.cpp  damagesystem.hpp  debugrenderingsystem.cpp  debugrenderingsystem.hpp  movementsystem.cpp  movementsystem.hpp  playercontroller.cpp  playercontroller.hpp  rendersystem.cpp  rendersystem.hpp
source/anemone/utils/: check.hpp  common.hpp
source/anemone/window/: window.cpp  window.hpp
testgame/: CMakeLists.txt
testgame/source/: game.cpp  game.hpp  main.cpp
